fixing images and description background color to work on safari

--- a/profile/src/scss/Background.scss
+++ b/profile/src/scss/Background.scss
@@ -8,7 +8,7 @@
   z-index: 2;
   height: 100vh;
   height: calc(var(--vh, 1vh) * 100);
-  background-image: url("https://i.ibb.co/42sgFCf/background.jpg");
+  background-image: url("https://icicathy.sirv.com/profile/background.JPG");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -26,7 +26,7 @@
     overflow-x: hidden;
     border-radius: 14px;
     background-color: #fefefe8d;
-    backdrop-filter: blur(4px);
+    backdrop-filter: blur(24px);
     z-index: 4;
 
     & .icons {
