--- a/profile/src/scss/Projects.scss
+++ b/profile/src/scss/Projects.scss
@@ -32,8 +32,8 @@
 
       & img {
         object-fit: cover;
-        height: 50vh;
-        width: min-content;
+        height: calc(var(--vh, 1vh) * 50);
+        width: auto;
         z-index: 3;
         border-radius: 10px;
         @media only screen and (max-width: 900px) {
@@ -58,7 +58,7 @@
         text-align: center;
         background-color: #fefefe8d;
         color: #755552;
-        backdrop-filter: blur(8px);
+        backdrop-filter: blur(24px);
         z-index: 4;
         border-radius: 10px;
         overflow-x: hidden;
